fixed code sends photo method