@@ -1,20 +1,19 @@
 package com.example.telegrambot.service.command.file;
 
-import com.example.telegrambot.service.command.file.SendFileCommand;
-import com.example.telegrambot.service.command.text.SendTextCommand;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class SelectFileCommand {
     private final List<SendFileCommand> fileCommandList;
 
     @Autowired
-    public SelectFileCommand(List<SendFileCommand> fileCommandList, List<SendTextCommand> textCommandList) {
+    public SelectFileCommand(List<SendFileCommand> fileCommandList) {
         this.fileCommandList = fileCommandList;
     }
 
@@ -28,7 +27,7 @@ public class SelectFileCommand {
                         fileCommandList.stream()
                                 .filter(clazz -> clazz.getClass().getAnnotation(Component.class)
                                         .value().equals("/incorrect"))
-                                .findFirst().stream().toList()
+                                .findFirst().stream().collect(Collectors.toList())
                 );
     }
 }
